# ur5_old

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: ur5.launch
src/motion_planner_ur5/: motion_planner.cpp  motion_planner.h
src/scripts/: actual_poses_params.py
src/task_planner/: desired_poses_node.py  motion_planner.cpp  robot_controller.cpp  task_planner.cpp  ur5_generic.py
src/ur5_modules/: desired_poses_params.py
src/vision/: CMakeLists.txt
src/vision/scripts/: Block_detection.py  Region_of_interest.py  vision-node.py  vision-node1.py
src/vision/scripts/models/X1-Y3-Z2-FILLET/mesh/: X1-Y3-Z2-FILLET.stl
srv/: GetBrickPose.srv  GetDesiredPoses.srv  MoveBlock.srv  MoveRobot.srv
world/: world.world
